c2prj1_cards/grade.txt
Grading at Mon Jun 10 22:10:48 UTC 2019
Compiling cards.c
In file included from cards.c:2:0:
cards.c: In function ‘assert_card_valid’:
cards.c:9:10: error: ‘suit’ undeclared (first use in this function)
   assert(suit>=0 && suit <= 3);
          ^
cards.c:9:10: note: each undeclared identifier is reported only once for each function it appears in
cards.c: In function ‘ranking_to_string’:
cards.c:23:3: error: expected ‘,’ or ‘;’ before ‘return’
   return handName[r];
   ^
cards.c:13:15: error: unused variable ‘handName’ [-Werror=unused-variable]
   const char *handName[]={
               ^
cards.c: In function ‘value_letter’:
cards.c:39:5: error: a label can only be part of a statement and a declaration is not a statement
     char dum = '0' + c.value;
     ^
cards.c: In function ‘ranking_to_string’:
cards.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
